--- a/archives/2021-03-16.md
+++ b/archives/2021-03-16.md
@@ -1,58 +1,69 @@
 # 2021-03-16
 
-共 133 条
+共 144 条
 
 <!-- BEGIN -->
-<!-- 最后更新时间 Tue Mar 16 2021 13:06:33 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Mar 16 2021 14:01:40 GMT+0800 (China Standard Time) -->
 1. [如何看待 3 月 16 日何炅被拍到与男子手牵手过马路？](https://www.zhihu.com/question/449585882)
-1. [《少年的你》入围第 93 届奥斯卡最佳国际影片，你觉得获奖机会大吗？](https://www.zhihu.com/question/449520471)
-1. [如何看待南京一程序员业余帮网友鉴定毒蘑菇，一年鉴定 2000 多次，成为拥有百万粉丝的网络大 V ？](https://www.zhihu.com/question/448896625)
 1. [如何看待张雪峰因小孩上学户口问题回到苏州？](https://www.zhihu.com/question/449231456)
+1. [如何看待南京一程序员业余帮网友鉴定毒蘑菇，一年鉴定 2000 多次，成为拥有百万粉丝的网络大 V ？](https://www.zhihu.com/question/448896625)
 1. [「丼」字念什么？](https://www.zhihu.com/question/449089251)
 1. [学历低除了进厂还能干嘛？](https://www.zhihu.com/question/440486008)
-1. [如何看待张雨剑承认与吴倩已婚生子：正常恋爱结婚？](https://www.zhihu.com/question/449522933)
-1. [小龙坎火锅被曝用发芽发黑土豆，菌菇青菜类食材不清洗，用扫帚捣制冰机，连锁门店服务和卫生质量如何保证？](https://www.zhihu.com/question/449434040)
-1. [如何看待 315  晚会曝光摄像头人脸识别遭滥用，需要如何解决？](https://www.zhihu.com/question/449514194)
 1. [如何看待王仕鹏对《吐槽大会》的回应：「什么时候足球运动员能评价篮球好坏了」？](https://www.zhihu.com/question/449601303)
+1. [小龙坎火锅被曝用发芽发黑土豆，菌菇青菜类食材不清洗，用扫帚捣制冰机，连锁门店服务和卫生质量如何保证？](https://www.zhihu.com/question/449434040)
 1. [为何家里越富裕的孩子普遍学习成绩更好？](https://www.zhihu.com/question/441150384)
-1. [如何看待 2021 年 315 晚会又见瘦肉精？为何瘦肉精屡禁不止？](https://www.zhihu.com/question/449515604)
-1. [如何看待范志毅在《吐槽大会》上的表现？](https://www.zhihu.com/question/449429247)
+1. [《少年的你》入围第 93 届奥斯卡最佳国际影片，你觉得获奖机会大吗？](https://www.zhihu.com/question/449520471)
+1. [如何看待张雨剑承认与吴倩已婚生子：正常恋爱结婚？](https://www.zhihu.com/question/449522933)
 1. [沈腾贾玲还有参加王牌的必要吗？](https://www.zhihu.com/question/447691788)
-1. [比特币的结局是否会像郁金香一样?](https://www.zhihu.com/question/445567290)
+1. [如何看待范志毅在《吐槽大会》上的表现？](https://www.zhihu.com/question/449429247)
 1. [除了徐闻菠萝，中国到底还有多少宝藏水果？](https://www.zhihu.com/question/448462051)
+1. [比特币的结局是否会像郁金香一样?](https://www.zhihu.com/question/445567290)
 1. [如何看待 315 晚会曝光的长安福特翼搏、福克斯车型变速箱生锈，4S 店认为是车主驾驶不当导致进水？](https://www.zhihu.com/question/449515568)
+1. [如果宣布地球寿命还剩十年，之后地球上的生命都将毁灭，那这十年社会变成什么样子？](https://www.zhihu.com/question/446997841)
 1. [鹰眼凭什么是世界第一大剑豪？](https://www.zhihu.com/question/346857720)
 1. [如果你在《斗罗大陆》，你认为你的武魂和魂技是什么呢？](https://www.zhihu.com/question/413912160)
+1. [作为一名女性，你愿意和杨超越互换人生吗？](https://www.zhihu.com/question/434202591)
 1. [假如法律规定「喝果汁饮料必须先摇一摇，否则罚款五十」会怎样？](https://www.zhihu.com/question/448663533)
-1. [如果宣布地球寿命还剩十年，之后地球上的生命都将毁灭，那这十年社会变成什么样子？](https://www.zhihu.com/question/446997841)
-1. [电子科技大学 iPad 双语失物招领事件为什么会演变为网络暴力？当下舆论中的偏见和指责该如何面对？](https://www.zhihu.com/question/449130931)
+1. [如何看待九江银行推出「彩礼贷」且声称「贷」来稳稳的幸福 ？](https://www.zhihu.com/question/449598282)
+1. [如何看待 315  晚会曝光摄像头人脸识别遭滥用，需要如何解决？](https://www.zhihu.com/question/449514194)
+1. [如何评价美国防长出访日韩前，称「中国是主要威胁」，要联合盟友对华施加威慑？](https://www.zhihu.com/question/449477798)
 1. [2021 LPL 春季赛 RA 九连胜遭 LGD 2:1 终结，如何评价这场比赛？](https://www.zhihu.com/question/449472220)
+1. [《原神》开服已经接近半年，现在如何再去深入评价可莉这个角色？](https://www.zhihu.com/question/449239287)
+1. [假如我拥有让任何一个人患上口腔溃疡的能力，我能用来做什么？](https://www.zhihu.com/question/448970341)
+1. [怎样提高说话时的瞬时反应能力？](https://www.zhihu.com/question/20733826)
+1. [武松徒手毙虎，为何只是个步兵都头？](https://www.zhihu.com/question/448916800)
+1. [如何看待realme被安兔兔爆料跑分75W涉嫌作弊，发长文进行“科普性”解释?](https://www.zhihu.com/question/449500138)
+1. [经历了间隔年（Gap Year）的人，你们觉得是值得还是后悔？](https://www.zhihu.com/question/27909931)
+1. [为什么有的人化妆差别不大而有的人简直就像变了个人？](https://www.zhihu.com/question/67205908)
+1. [为什么古代做个明君那么难？](https://www.zhihu.com/question/436183483)
+1. [别人家孩子小学都在补语数英，我们不补，初中会跟不上吗？](https://www.zhihu.com/question/437581262)
+1. [广东首次发现新冠病毒尼日利亚突变株，会有什么影响？对防疫有哪些新要求？](https://www.zhihu.com/question/449308533)
+1. [如何看待 2021 年 315 晚会又见瘦肉精？为何瘦肉精屡禁不止？](https://www.zhihu.com/question/449515604)
+1. [运气是不是比努力还重要？](https://www.zhihu.com/question/446459625)
+1. [如果你有一种能力，能让互联网上的所有人通过不同渠道看到你发出的内容，你会如何使用这个能力？](https://www.zhihu.com/question/448952086)
+1. [不谈恋爱的朋友，你们都是因为什么呢？](https://www.zhihu.com/question/447017319)
+1. [已婚明星凹单身人设、炒 CP，算不算欺骗粉丝和观众？算不算欺诈？](https://www.zhihu.com/question/449537092)
+1. [拿年薪的多少倍买车合适？](https://www.zhihu.com/question/383531441)
+1. [如何评价朴彩英的solo初舞台？](https://www.zhihu.com/question/449353531)
+1. [你如何看待在游戏中代练/代打的行为？](https://www.zhihu.com/question/449192547)
+1. [拥有全套小米智能家居是什么体验，全套需要多少钱？](https://www.zhihu.com/question/356183914)
+1. [每天至少保证学习多久才能公考上岸？](https://www.zhihu.com/question/403638262)
+1. [婴儿床是智商税吗?](https://www.zhihu.com/question/445039825)
 1. [如何评价易立竞和马思纯在《吐槽大会》上的 Battle?](https://www.zhihu.com/question/449380135)
 1. [在哪一瞬间你突然对男朋友死心了？](https://www.zhihu.com/question/313213582)
-1. [武松徒手毙虎，为何只是个步兵都头？](https://www.zhihu.com/question/448916800)
-1. [《原神》开服已经接近半年，现在如何再去深入评价可莉这个角色？](https://www.zhihu.com/question/449239287)
-1. [别人家孩子小学都在补语数英，我们不补，初中会跟不上吗？](https://www.zhihu.com/question/437581262)
-1. [怎样提高说话时的瞬时反应能力？](https://www.zhihu.com/question/20733826)
-1. [运气是不是比努力还重要？](https://www.zhihu.com/question/446459625)
-1. [为什么有的人化妆差别不大而有的人简直就像变了个人？](https://www.zhihu.com/question/67205908)
-1. [广东首次发现新冠病毒尼日利亚突变株，会有什么影响？对防疫有哪些新要求？](https://www.zhihu.com/question/449308533)
-1. [为什么古代做个明君那么难？](https://www.zhihu.com/question/436183483)
-1. [如果你有一种能力，能让互联网上的所有人通过不同渠道看到你发出的内容，你会如何使用这个能力？](https://www.zhihu.com/question/448952086)
+1. [电子科技大学 iPad 双语失物招领事件为什么会演变为网络暴力？当下舆论中的偏见和指责该如何面对？](https://www.zhihu.com/question/449130931)
+1. [读博退学是一种什么样的体验？退学后的生活又是怎样的？](https://www.zhihu.com/question/29170892)
+1. [省考面试裸考是什么体验？](https://www.zhihu.com/question/426166570)
 1. [如何看待 315 晚会曝光英菲尼迪 QX60 频发变速箱故障，4S 店为掩盖问题要求车主签保密协议？](https://www.zhihu.com/question/449517026)
-1. [不谈恋爱的朋友，你们都是因为什么呢？](https://www.zhihu.com/question/447017319)
 1. [甲醛 0.07 两岁宝宝能住吗？](https://www.zhihu.com/question/442317516)
-1. [作为一名女性，你愿意和杨超越互换人生吗？](https://www.zhihu.com/question/434202591)
-1. [假如我拥有让任何一个人患上口腔溃疡的能力，我能用来做什么？](https://www.zhihu.com/question/448970341)
 1. [2021 LPL 春季赛 iG 2:0 TT 晋级季后赛，如何评价这场比赛？](https://www.zhihu.com/question/449512603)
 1. [有哪些建议和提醒可以送给新一届科研生？](https://www.zhihu.com/question/448966946)
 1. [上岛干了半年群法干员，对未来感到很迷茫，现在去干法术近卫还来得及吗？](https://www.zhihu.com/question/449464404)
-1. [读博退学是一种什么样的体验？退学后的生活又是怎样的？](https://www.zhihu.com/question/29170892)
 1. [有哪些可以玩游戏的轻薄笔记本值得推荐？](https://www.zhihu.com/question/412299940)
 1. [有什么青梅竹马的甜甜小说吗？](https://www.zhihu.com/question/447643338)
 1. [如何看待东海航空通报机长乘务长打架事件处理结果：当班机长和乘务员被终身停飞，公司多名副总裁被免职？](https://www.zhihu.com/question/449419093)
 1. [如何看待NASA火星船票近期国内爆火?](https://www.zhihu.com/question/449077624)
 1. [跨考法硕（非法学）有哪些备考经验？](https://www.zhihu.com/question/46570411)
-1. [省考面试裸考是什么体验？](https://www.zhihu.com/question/426166570)
 1. [减肥最难的是什么？](https://www.zhihu.com/question/445545771)
 1. [如何培养自己深度思考的习惯？](https://www.zhihu.com/question/290935221)
 1. [你用过最好的平价防晒是哪个？](https://www.zhihu.com/question/312092758)
