--- a/archives/2021-04-05.md
+++ b/archives/2021-04-05.md
@@ -1,52 +1,63 @@
 # 2021-04-05
 
-共 155 条
+共 161 条
 
 <!-- BEGIN -->
-<!-- 最后更新时间 Mon Apr 05 2021 18:00:43 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Apr 05 2021 19:00:40 GMT+0800 (China Standard Time) -->
 1. [「宁愿花 11K 重新招人，也不愿意花 9K 留住老员工」的现象是否属实？为什么会出现该现象？](https://www.zhihu.com/question/63878469)
 1. [社会狠狠的教会过你什么？](https://www.zhihu.com/question/431538148)
 1. [退役军人事务部公布了100位烈士的名字，有哪些技术和方法可以帮助烈士们找到亲人？你能提供一些帮助吗？](https://www.zhihu.com/question/452345876)
 1. [小学的成绩有很大的欺骗性，到了初中就会有很多的学生掉队，是真的吗？](https://www.zhihu.com/question/433616847)
 1. [如何看待网曝泰山酒店价高游客挤厕所过夜，景区回应明码标价，未接到坐地起价投诉？](https://www.zhihu.com/question/452920549)
-1. [如何看待特朗普开通个人官网，承接各种红白喜事祝词？这预示着什么？](https://www.zhihu.com/question/452171246)
 1. [我女朋友27了现在工作一月5000多，花钱没有概念，月月光甚至透支，该怎么劝她存钱？](https://www.zhihu.com/question/428842571)
 1. [《哥斯拉大战金刚》里，为啥哥斯拉都把金刚踩脚底下了不来个绝杀，而是对视了一下扭头走了，是爱情吗？](https://www.zhihu.com/question/451605997)
 1. [房思琪为什么会疯了？](https://www.zhihu.com/question/345391080)
+1. [如何看待特朗普开通个人官网，承接各种红白喜事祝词？这预示着什么？](https://www.zhihu.com/question/452171246)
 1. [《我的姐姐》这部电影你觉得如何？](https://www.zhihu.com/question/450067672)
-1. [如何看待美国总统拜登表示2021年美国的GDP增长率将超过6%？](https://www.zhihu.com/question/451302635)
 1. [为什么妈妈更容易陷入「鸡娃焦虑」？](https://www.zhihu.com/question/451871565)
-1. [你曾被哪句文案救赎过？](https://www.zhihu.com/question/447479604)
-1. [父亲肺癌晚期，该不该倾家荡产去治疗？](https://www.zhihu.com/question/446433748)
+1. [如何看待美国总统拜登表示2021年美国的GDP增长率将超过6%？](https://www.zhihu.com/question/451302635)
 1. [如何看待 LG 宣布退出智能手机业务？LG 是怎样在手机市场节节败退的？为什么会这样？](https://www.zhihu.com/question/452990678)
 1. [小米 11 ultra 的实际体验如何？](https://www.zhihu.com/question/452077572)
-1. [豹女的标那么好躲，为什么高端局还那么多人玩?](https://www.zhihu.com/question/451881236)
 1. [2021 年，疫苗能结束新冠大流行吗？](https://www.zhihu.com/question/436868073)
+1. [豹女的标那么好躲，为什么高端局还那么多人玩?](https://www.zhihu.com/question/451881236)
+1. [你曾被哪句文案救赎过？](https://www.zhihu.com/question/447479604)
 1. [沉迷于买断制的电脑游戏，真的是一项更省钱的爱好吗？](https://www.zhihu.com/question/452613960)
+1. [假如我的头盖骨能零距离确保挡住7.62mm全威力弹，我能成为战神级别的士兵吗？](https://www.zhihu.com/question/444459120)
+1. [父亲肺癌晚期，该不该倾家荡产去治疗？](https://www.zhihu.com/question/446433748)
 1. [考研再战是找个自习室，还是报一个寄宿学校呢？](https://www.zhihu.com/question/448393851)
 1. [同时考上了研究生和公务员，怎么选择？](https://www.zhihu.com/question/452303549)
+1. [高三有哪些相见恨晚的刷题技巧？](https://www.zhihu.com/question/311672493)
 1. [家里使用烘干机，真的能取消晾晒区吗？](https://www.zhihu.com/question/450607143)
-1. [如何看待炒鞋大军转战国货，李宁球鞋遭热炒暴涨 31 倍，有人几天赚一辆车？反映了哪些问题？](https://www.zhihu.com/question/452737722)
-1. [假如我的头盖骨能零距离确保挡住7.62mm全威力弹，我能成为战神级别的士兵吗？](https://www.zhihu.com/question/444459120)
-1. [csgo水平很高官匹却上不去分怎么办？](https://www.zhihu.com/question/448402121)
-1. [定向选调生怎么样，是否推荐报考？](https://www.zhihu.com/question/451996696)
-1. [如何评价《Fate/stay night》的HF线第三章最后一段卫宫士郎说自己不想死？](https://www.zhihu.com/question/452333396)
 1. [为什么INTP、INTJ如此稀少？](https://www.zhihu.com/question/357147669)
-1. [公牛 115:107 力克篮网，如何评价这场比赛？](https://www.zhihu.com/question/452959232)
-1. [原地打方向盘到底有多伤车？](https://www.zhihu.com/question/354665595)
+1. [如何评价《Fate/stay night》的HF线第三章最后一段卫宫士郎说自己不想死？](https://www.zhihu.com/question/452333396)
+1. [银渐层和田园猫会生出什么样子的小猫？](https://www.zhihu.com/question/411807577)
 1. [学历重要还是能力更重要？](https://www.zhihu.com/question/448342158)
+1. [夏天到了，可以推荐几款防晒霜吗？](https://www.zhihu.com/question/272023717)
+1. [男生失望攒够了分手还会回头吗？](https://www.zhihu.com/question/452306238)
+1. [原地打方向盘到底有多伤车？](https://www.zhihu.com/question/354665595)
+1. [有哪些超级温柔的句子推荐？](https://www.zhihu.com/question/351551702)
 1. [有没有特别好看的沙雕穿书文？](https://www.zhihu.com/question/446600014)
-1. [做外贸有哪些比较好的软件可以推荐？](https://www.zhihu.com/question/54788846)
-1. [保研成功的本科生们后来都怎么样了？](https://www.zhihu.com/question/449165920)
+1. [马上要毕业了，班上正在选班服，有没有好看的班服推荐？](https://www.zhihu.com/question/376458606)
+1. [定向选调生怎么样，是否推荐报考？](https://www.zhihu.com/question/451996696)
 1. [如何辨认身边的聪明人？](https://www.zhihu.com/question/28484672)
+1. [如何看待炒鞋大军转战国货，李宁球鞋遭热炒暴涨 31 倍，有人几天赚一辆车？反映了哪些问题？](https://www.zhihu.com/question/452737722)
+1. [保研成功的本科生们后来都怎么样了？](https://www.zhihu.com/question/449165920)
 1. [为什么蒋方舟会喜欢阎连科？](https://www.zhihu.com/question/20783627)
-1. [高中语文刷题能不能提高成绩？](https://www.zhihu.com/question/37301560)
-1. [你觉得《少年 On Fire》第二季第一期哪个舞台让你印象深刻？](https://www.zhihu.com/question/452440996)
 1. [为什么都在夸新版edge？](https://www.zhihu.com/question/385302999)
-1. [明知道她不喜欢你，你还愿意坚持下去吗？](https://www.zhihu.com/question/451598052)
+1. [csgo水平很高官匹却上不去分怎么办？](https://www.zhihu.com/question/448402121)
+1. [公牛 115:107 力克篮网，如何评价这场比赛？](https://www.zhihu.com/question/452959232)
 1. [如何看待「疯批美人」在二次元中广受观众欢迎？](https://www.zhihu.com/question/452603572)
 1. [3.5 毫米耳机孔，到底是先进还是落后？](https://www.zhihu.com/question/447810768)
 1. [江苏沈海高速发生重大交通事故，已致 11 人死亡，目前情况如何？事故责任如何认定？](https://www.zhihu.com/question/452830638)
+1. [2021 年，预算 200 元可以买到哪些实用的租房电器？](https://www.zhihu.com/question/450161285)
+1. [有没有令人心动的春天文案？](https://www.zhihu.com/question/445077161)
+1. [谈恋爱是喜欢更重要还是合适更重要？](https://www.zhihu.com/question/437833983)
+1. [你听过最励志的一句文案是什么？](https://www.zhihu.com/question/437716992)
+1. [在考研这方面真的是努力就会有回报吗？](https://www.zhihu.com/question/451076771)
+1. [做外贸有哪些比较好的软件可以推荐？](https://www.zhihu.com/question/54788846)
+1. [高中语文刷题能不能提高成绩？](https://www.zhihu.com/question/37301560)
+1. [你觉得《少年 On Fire》第二季第一期哪个舞台让你印象深刻？](https://www.zhihu.com/question/452440996)
+1. [明知道她不喜欢你，你还愿意坚持下去吗？](https://www.zhihu.com/question/451598052)
 1. [应届生参加工作，什么事情越早知道越好？](https://www.zhihu.com/question/407372614)
 1. [什么原因让你放弃他/她？](https://www.zhihu.com/question/451698546)
 1. [你会坚持一段没有结果的爱情吗？](https://www.zhihu.com/question/443086921)
@@ -55,11 +66,9 @@
 1. [公考失败后是怎么调节的？](https://www.zhihu.com/question/326438778)
 1. [199管理类联考怎么复习?](https://www.zhihu.com/question/396397053)
 1. [公务员面试停顿磕巴常见吗?](https://www.zhihu.com/question/448057643)
-1. [2021 年，预算 200 元可以买到哪些实用的租房电器？](https://www.zhihu.com/question/450161285)
 1. [明星与普通人之间颜值的差距到底有多大？](https://www.zhihu.com/question/63311419)
 1. [忘掉一个喜欢很久的男生要多久？](https://www.zhihu.com/question/451953552)
 1. [如何看待有人说「很多老人去了养老院才懂，养老院其实和想象的不一样」这一现象？](https://www.zhihu.com/question/440467400)
-1. [有没有令人心动的春天文案？](https://www.zhihu.com/question/445077161)
 1. [《三国演义》电视剧有什么硬伤？](https://www.zhihu.com/question/29442543)
 1. [有哪些读起来平平淡淡却令人深思的句子？](https://www.zhihu.com/question/427126589)
 1. [游戏《阴阳师》有哪些有意思的梗？](https://www.zhihu.com/question/450034461)
@@ -79,17 +88,14 @@
 1. [实木餐桌2000块钱能买到吗？](https://www.zhihu.com/question/333699476)
 1. [37岁失业了，怎么办？](https://www.zhihu.com/question/452583775)
 1. [跨专业考研如何系统地准备？](https://www.zhihu.com/question/20838366)
-1. [在考研这方面真的是努力就会有回报吗？](https://www.zhihu.com/question/451076771)
 1. [如何以「皇帝的白月光贵妃死了」为开头，写一篇虐心古文?](https://www.zhihu.com/question/435694240)
 1. [macOS 有哪些冷门但是一但发现就无法自拔的软件？](https://www.zhihu.com/question/35050387)
 1. [《DOTA2》新加坡 Major 决赛 iG 让二追三击败 EG 夺冠，你有什么想说的？](https://www.zhihu.com/question/452854474)
-1. [你听过最励志的一句文案是什么？](https://www.zhihu.com/question/437716992)
 1. [人生到底值不值得？](https://www.zhihu.com/question/307311764)
 1. [2021 LCK 春季半决赛 Gen.G 3:0 击败 T1，如何评价这场比赛？](https://www.zhihu.com/question/452895502)
 1. [喜欢你的人真的可以忍住不找你吗？](https://www.zhihu.com/question/433052807)
 1. [如何评价阿里员工发文《致阿里》：我想偷懒驴之常情，你不想我偷懒人之常情，但不能一边抽我一边让我爱你？](https://www.zhihu.com/question/447760592)
 1. [如何易懂地向小朋友解释什么是「新生」，什么是「死亡」？](https://www.zhihu.com/question/452700050)
-1. [谈恋爱是喜欢更重要还是合适更重要？](https://www.zhihu.com/question/437833983)
 1. [有哪些惊艳到自己的古诗词？](https://www.zhihu.com/question/311311968)
 1. [你有没有特别喜欢的句子？](https://www.zhihu.com/question/452331766)
 1. [五分长相是一种怎样的长相？](https://www.zhihu.com/question/63256882)
